tracing-async2/src/snapshots/tracing_async2__tests__async-layer.snap
---
source: tracing-async2/src/lib.rs
expression: extract_events(&events)
---
[
  {
    "level": "Trace",
    "file": "tracing-async2/src/lib.rs",
    "target": "tracing_async2::tests",
    "line": "<line>",
    "name": "event tracing-async2/src/lib.rs:<line>",
    "message": "this is a trace message",
    "fields": {
      "bar": 2,
      "foo": 1
    }
  },
  {
    "level": "Debug",
    "file": "tracing-async2/src/lib.rs",
    "target": "tracing_async2::tests",
    "line": "<line>",
    "name": "event tracing-async2/src/lib.rs:<line>",
    "message": "this is a debug message",
    "fields": {
      "pi": 3.14159265
    }
  },
  {
    "level": "Info",
    "file": "tracing-async2/src/lib.rs",
    "target": "tracing_async2::tests",
    "line": "<line>",
    "name": "event tracing-async2/src/lib.rs:<line>",
    "message": "this is an info message",
    "fields": {
      "job": "foo"
    }
  },
  {
    "level": "Warn",
    "file": "tracing-async2/src/lib.rs",
    "target": "tracing_async2::tests",
    "line": "<line>",
    "name": "event tracing-async2/src/lib.rs:<line>",
    "message": "this is a warning message",
    "fields": {
      "job": "foo"
    }
  },
  {
    "level": "Error",
    "file": "tracing-async2/src/lib.rs",
    "target": "tracing_async2::tests",
    "line": "<line>",
    "name": "event tracing-async2/src/lib.rs:<line>",
    "message": "this is an error message",
    "fields": {
      "job": "foo"
    }
  }
]
