tracing-async2/src/snapshots/tracing_async2__tests__channel-layer-with-spans.snap
---
source: tracing-async2/src/lib.rs
expression: extract_events(&events)
---
[
  {
    "event": {
      "level": "Trace",
      "file": "tracing-async2/src/lib.rs",
      "target": "tracing_async2::tests",
      "line": "<line>",
      "name": "event tracing-async2/src/lib.rs:<line>",
      "message": "this is a trace message",
      "fields": {
        "bar": 2,
        "foo": 1
      }
    },
    "spans": [
      {
        "level": "INFO",
        "file": "tracing-async2/src/lib.rs",
        "target": "tracing_async2::tests",
        "line": "<line>",
        "name": "root-info",
        "fields": {
          "recurse": 0
        }
      }
    ]
  },
  {
    "event": {
      "level": "Debug",
      "file": "tracing-async2/src/lib.rs",
      "target": "tracing_async2::tests",
      "line": "<line>",
      "name": "event tracing-async2/src/lib.rs:<line>",
      "message": "this is a debug message",
      "fields": {
        "pi": 3.14159265
      }
    },
    "spans": [
      {
        "level": "INFO",
        "file": "tracing-async2/src/lib.rs",
        "target": "tracing_async2::tests",
        "line": "<line>",
        "name": "root-info",
        "fields": {
          "recurse": 0
        }
      }
    ]
  },
  {
    "event": {
      "level": "Info",
      "file": "tracing-async2/src/lib.rs",
      "target": "tracing_async2::tests",
      "line": "<line>",
      "name": "event tracing-async2/src/lib.rs:<line>",
      "message": "this is an info message",
      "fields": {
        "job": "foo"
      }
    },
    "spans": [
      {
        "level": "INFO",
        "file": "tracing-async2/src/lib.rs",
        "target": "tracing_async2::tests",
        "line": "<line>",
        "name": "root-info",
        "fields": {
          "recurse": 0
        }
      }
    ]
  },
  {
    "event": {
      "level": "Warn",
      "file": "tracing-async2/src/lib.rs",
      "target": "tracing_async2::tests",
      "line": "<line>",
      "name": "event tracing-async2/src/lib.rs:<line>",
      "message": "this is a warning message",
      "fields": {
        "job": "foo"
      }
    },
    "spans": [
      {
        "level": "INFO",
        "file": "tracing-async2/src/lib.rs",
        "target": "tracing_async2::tests",
        "line": "<line>",
        "name": "root-info",
        "fields": {
          "recurse": 0
        }
      }
    ]
  },
  {
    "event": {
      "level": "Error",
      "file": "tracing-async2/src/lib.rs",
      "target": "tracing_async2::tests",
      "line": "<line>",
      "name": "event tracing-async2/src/lib.rs:<line>",
      "message": "this is an error message",
      "fields": {
        "job": "foo"
      }
    },
    "spans": [
      {
        "level": "INFO",
        "file": "tracing-async2/src/lib.rs",
        "target": "tracing_async2::tests",
        "line": "<line>",
        "name": "root-info",
        "fields": {
          "recurse": 0
        }
      }
    ]
  }
]
